# StarModel

./: .gitignore  .mcp.json  .sesskey  CLAUDE.md  MonsterUI.txt  README.md  debug_post_events.py  example_datastar_usage.py  faststate_demo.db  pyproject.toml  simple.py  test_app_integration.py  test_async_generator_fix.py  test_auth.py  test_composition_entity.py  test_counter_page_fix.py  test_datastar_parameters.py  test_direct_composition.py  test_fasthtml_integration.py  test_fasthtml_integration_improvements.py  test_faststate.db  test_integration.py  test_persistence.py  test_phase_1a.py  test_registry.py  test_sse_manager.py  test_standalone_composition.py
.claude/commands/: UI.md
app/: .sesskey  faststate_demo.db  main.py  route_collector.py  routes.py  starmodel.db
app/entities/: __init__.py  counter.py  dashboard.py  landing.py
app/migrations/: env.py
app/pages/: admin.py  auth.py  chat.py  counter.py  dashboard.py  data_playground.py  docs.py  index.py  playground.py  product.py  tasks.py  templates.py
docs/: APIReference.md  ArchitectureOverview.md  CoreComponents.md  DeveloperGuide.md  ExamplesAndPatterns.md  README.md  StateManagementRequirements.md  StateResearch.md  TechnicalImplementationGuide.md  pydantic.ipynb
documents/: Code Refactoring and Architecture.md  Detailed Refactoring Plan.md  DevelopmentPlan.md  Manifest.md  Screaming Architecture Migration Plan.md  Screaming Architecture Proposal.md  ShortManifesto-3.md  app-layer.md
examples/: cleanup_configuration.py
examples/clean-architecture-demo/: main.py
examples/counter-app/: __init__.py  main.py
examples/sql-integration-demo/: main.py
framework/: __init__.py
framework/entities/: __init__.py  di_container.py
framework/events/: __init__.py
framework/infrastructure/: __init__.py
framework/persistence/: __init__.py
framework/reactivity/: __init__.py
framework/realtime/: __init__.py
framework/web/: __init__.py  integration.py  interfaces.py  migration.py  routing.py  session.py
notebooks/: pydantic.ipynb
src/faststate/: __init__.py  auth.py  fasthtml_integration.py  persistence.py  registry.py  sse_manager.py  state.py
src/starmodel/: __init__.py  event.py  persistence.py  signals.py  state.py
tests/e2e/: direct_component_test.py  isolated_component_test.py  minimal_test.py  simple_e2e_test.py  test_complete_system.py
tools/: __init__.py  migration-tracker.md
tools/migration/: __init__.py  migration_status.json  (+1 more)
(+86 files in other folders)
