[project]
name = "starmodel"
version = "0.2.0"
description = "Entity-centric Python web framework for real-time collaborative applications"
readme = "README.md"
authors = [
    { name = "ndendic", email = "ndendic@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic",
    "datastar-py==0.4.3",
    "python-fasthtml>=0.12.19",
    "alembic>=1.14.0",
    "sqlmodel>=0.0.22",
    "typer[all]>=0.15.1",
]

[project.scripts]
starmodel = "tools.cli.starmodel_cli:app"

# Entry points for example applications
[project.entry-points."starmodel.examples"]
counter = "examples.counter_app.main:app"
dashboard = "examples.dashboard_app.main:app"
collaboration = "examples.collaboration_app.main:app"
full_demo = "examples.full_demo.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Package discovery for screaming architecture
[tool.setuptools.packages.find]
where = ["framework"]
include = ["starmodel*"]

[tool.setuptools.package-dir]
starmodel = "framework"

# Development tools configuration
[tool.pytest.ini_options]
testpaths = ["tests", "framework/*/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.mypy]
python_version = "3.12"
packages = ["framework", "examples", "tools"]
strict = true
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "monsterui>=1.0.21",
]

[tool.uv.sources]
datastar-py = { git = "https://github.com/starfederation/datastar.git", subdirectory = "sdk/python", rev = "develop" }
